# SentryAutoaimBackup

./: .gitignore  README.md  watchdog.sh
.github/workflows/: build-ci.yml  clang-format-ci.yml
rmos_bringup/: CMakeLists.txt  package.xml
rmos_bringup/configure/: hardware_settings_l.yaml  hardware_settings_r.yaml  usb_camera.xml  virtual_cam_info.yaml
rmos_bringup/configure/camera_left/: daheng_cam_info_l.yaml  daheng_camera_l.xml
rmos_bringup/configure/camera_right/: daheng_cam_info_r.yaml  daheng_camera_r.xml
rmos_bringup/launch/: left_aim.launch.py  mix_aim.launch.py  normal_aim.launch.py  right_aim.launch.py
src/Algorithm/: CMakeLists.txt  package.xml
src/Algorithm/AIOF-IP/: CMakeLists.txt
src/rm2_referee_msgs/: CMakeLists.txt  package.xml
src/rmos_cam/: CMakeLists.txt  package.xml
src/rmos_cam/include/: cam_node.hpp
src/rmos_cam/src/: daheng_cam_node.cpp
src/rmos_cam_l/: CMakeLists.txt  package.xml
src/rmos_cam_l/include/: cam_node.hpp
src/rmos_cam_l/src/: daheng_cam_node.cpp
src/rmos_cam_r/: CMakeLists.txt  package.xml
src/rmos_cam_r/include/: cam_node.hpp
src/rmos_cam_r/src/: daheng_cam_node.cpp
src/rmos_detector/: CMakeLists.txt  package.xml
src/rmos_detector/include/: detector_node.hpp
src/rmos_detector/src/: basic_detector_node.cpp
src/rmos_detector_l/: CMakeLists.txt  package.xml
src/rmos_detector_r/: CMakeLists.txt  package.xml
src/rmos_interfaces/: CMakeLists.txt
src/rmos_processer/: CMakeLists.txt  package.xml
src/rmos_processer_l/: CMakeLists.txt  package.xml
src/rmos_processer_r/: CMakeLists.txt  package.xml
src/rmos_recorder/: CMakeLists.txt  package.xml
src/rmos_recorder/include/: recorder_node.hpp
src/rmos_recorder/src/: recorder_node.cpp
src/rmos_transporter/: CMakeLists.txt  package.xml
src/rmos_transporter_l/: CMakeLists.txt  package.xml
src/rmos_transporter_r/: CMakeLists.txt  package.xml
src/sentry_interfaces/: CMakeLists.txt  package.xml
(+92 files in other folders)
